tests/data/test-resources/ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-master
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cafe.example.com
      secretName: cafe-secret-master
  rules:
    - host: cafe.example.com
