tests/data/test-resources/virtual-server.yaml
apiVersion: k8s.nginx.org/v1
kind: VirtualServer
metadata:
  name: vs
spec:
  host: vs.example.com
  tls:
    secret: secret
  upstreams:
  - name: backend
    service: backend-svc
    port: 80
  routes:
  - path: "/backend"
    action:
      pass: backend
